# opencv-object-detection

./: Makefile  README.md  pyproject.toml  requirements.txt
cv2_detection/: __init__.py  cv2_image_threshing.py  cv2_objects.py  cv2_painting.py
cv2_detection/object_detection/: __init__.py  indication.py  painting.py
cv2_detection/object_detection/detection/: __init__.py  contour_processing.py  image_threshing.py  object_detection.py  objects.py
example/: contour_processing.py  main.py
example/hsv_range/: main.py
